--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "promise-demo",
+  "name": "ember-promise-demo",
   "dependencies": {
     "ember": "~2.8.0",
     "ember-cli-shims": "0.1.1"
